--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,28 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 0;
+  padding: 0 1%;
+  overflow: hidden;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+nav{
+  display: flex;
+  justify-content: space-around;
+  border-bottom: 1px solid black;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.leftnavside{
+  width: 50%;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.rightnavside{
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  padding:10px;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul{
+  list-style: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+nav a{
+  padding:0 5%;
+  color:inherit;
+  text-decoration:none;
+  outline: none;
 }
