--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
 }
 nav{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   border-bottom: 1px solid black;
   margin-bottom: 5%;
 }
@@ -15,7 +15,7 @@ nav{
 .rightnavside{
   width: 50%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding:2% 0;
 }
 nav ul{
